error.log
file:///Users/edfornieles/simple_mind/sorority_mind/server.js:22
import longTermMemory from './core_system/longTermMemory.js';
       ^^^^^^^^^^^^^^
SyntaxError: The requested module './core_system/longTermMemory.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:175:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:258:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:540:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.19.1
